--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "test-action-api",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
-    "start": "node ./index.js"
+    "start": "node ./index.js",
+    "test": "echo if i update this file, it should not activate the action"
   },
   "dependencies": {
     "debug": "~2.6.9",
